# smartwatch

./: .gitignore  CMakeLists.txt  README.md  diffs  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  lv_conf.h  main.c
main/ebike/: lv_demo_ebike.c  lv_demo_ebike.h  lv_demo_ebike_home.h  lv_demo_ebike_private.h  lv_demo_ebike_settings.h  lv_demo_ebike_stats.h
main/ebike/translations/: lv_i18n.h
main/smartwatch/: lv_demo_smartwatch.c  lv_demo_smartwatch.h  lv_demo_smartwatch_control.c  lv_demo_smartwatch_control.h  lv_demo_smartwatch_health.c  lv_demo_smartwatch_health.h  lv_demo_smartwatch_music.c  lv_demo_smartwatch_music.h  lv_demo_smartwatch_private.h  lv_demo_smartwatch_sports.c  lv_demo_smartwatch_sports.h  lv_demo_smartwatch_weather.c  lv_demo_smartwatch_weather.h
main/smartwatch_libs/: smartwatch_libs.h
